JVM小测试