@@ -16,7 +16,11 @@ public class TestHelloGC {
      * boolean类型  双xx  +代表开启  - 关闭
      * kv类型
      *
-     * -Xms初始堆内存大小  -Xmx最大堆内存大小。1/64 属于xx方式
+     * -Xms初始堆内存大小，一般为初始的1/64大小
+     * -Xmx最大堆内存大小，一般默认为1/4。属于xx方式
+     *
+     * -Xss 栈空间  等价于-XX:ThreadStackSize
+     *
      *
      * 查找JVM初始化默认参数的命令：
      * java -XX:+PrintFlagsInitial
@@ -27,8 +31,19 @@ public class TestHelloGC {
      * 打印命令参数
      * java -XX:+PrintCommandLineFlags -version
      * @param args
+     * 堆存储  栈运行
+     *
+     * 经典JVM配置
+     * -Xms128m -Xmx4096m -Xss1024k -XX:MetaspaceSize=512m -XX:+PrintCommandLineFlags -XX:+PrintGCDetails -XX:+UseSerialGC
+     *
      */
     public static void main(String[] args) {
+        //获取初始内存大小Java方法 -Xms
+        long totalMemory = Runtime.getRuntime().totalMemory();
+        //Java虚拟机试图使用的最大内存量
+        long maxMemory = Runtime.getRuntime().maxMemory();
+
+        //获取
         System.out.println("---------------------");
         try {
             Thread.sleep(Integer.MAX_VALUE);
